-
Bug
-
Resolution: Done
-
P2: Important
-
6.4.0
-
-
c3dccfef22 (qt/qtbase/dev) 11dfb44144 (qt/qtbase/6.4) 11dfb44144 (qt/tqtc-qtbase/6.4) c3dccfef22 (qt/tqtc-qtbase/dev)
static constexpr QLatin1Char bang[] = { u' ', u'!' };
MSVC2019 produces C2440: cannot convert from 'char16_t' to 'const QLatin1Char'. Similar errors were reported by GCC and Clang.
This code was merged in https://codereview.qt-project.org/c/qt/qtbase/+/406169 (Line 2470) – does the CI try to build plugins? Could there be other undetected breakages?
- resulted from
-
QTBUG-98434
As a QLatin1String user, I'm puzzled that this class is a view
-
- Closed
-