SQL/OCI: fix compilation

Fix compilation error introduced with
917b4d3802f3c2102021610cbf977403a3d4c21a and add a missing override

Fixes: QTBUG-107544
Change-Id: I53571a0a113dc0f1e65f8773e66c02c1764739ee
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: Sze Howe Koh <szehowe.koh@gmail.com>
(cherry picked from commit c3dccfef22267c2f78438973a39bc91260d96582)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>